--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:name="edu.dartmouth.cs.project.sixpk.StatisticsActivity"
             android:label="@string/title_activity_statisctics" >
         </activity>
+      <receiver android:name=".NotificationPublisher" />
     </application>
 
 </manifest>
