--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:theme="@style/AppThemeNoActionBar" >
         <activity
             android:name="edu.dartmouth.cs.project.sixpk.MainActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name">
             <intent-filter>
@@ -20,21 +21,25 @@
         </activity>
         <activity
             android:name="edu.dartmouth.cs.project.sixpk.PreviewActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="edu.dartmouth.cs.project.sixpk.WorkoutActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="edu.dartmouth.cs.project.sixpk.FeedbackActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="edu.dartmouth.cs.project.sixpk.StatisticsActivity"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_statisctics" >
         </activity>
         <receiver android:name=".NotificationPublisher" />
